[gd_scene load_steps=3 format=2]

[ext_resource path="res://Theme/GREEN_theme.tres" type="Theme" id=1]
[ext_resource path="res://Systems/RCM/right_click_menu.gd" type="Script" id=2]

[node name="right_click_menu" type="Control"]
anchor_left = -0.00147317
anchor_right = 0.998527
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.294118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_left = 904.0
margin_top = 205.0
margin_right = 1011.0
margin_bottom = 356.0
items = [ "Reset Game", null, 0, false, false, 0, 0, null, "", false, "Shuffle", null, 0, false, false, 1, 0, null, "", false, "Split", null, 0, false, false, 2, 0, null, "", false, "", null, 0, false, true, 3, 0, null, "", true, "Draw", null, 0, false, false, 5, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WriteAmountPop" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -70.0
margin_right = 112.0
margin_bottom = 70.0
focus_next = NodePath("vbc/period/LineEdit")
popup_exclusive = true
window_title = "Write Amount"
resizable = true
dialog_hide_on_ok = false

[node name="vbc" type="VBoxContainer" parent="WriteAmountPop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -45.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="period" type="HBoxContainer" parent="WriteAmountPop/vbc"]
margin_top = 29.0
margin_right = 208.0
margin_bottom = 58.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WriteAmountPop/vbc/period"]
margin_right = 102.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Amount:"
align = 1

[node name="LineEdit" type="LineEdit" parent="WriteAmountPop/vbc/period"]
margin_left = 106.0
margin_right = 208.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="period2" type="HBoxContainer" parent="WriteAmountPop/vbc"]
visible = false
margin_top = 45.0
margin_right = 208.0
margin_bottom = 74.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WriteAmountPop/vbc/period2"]
margin_right = 102.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Amount:"
align = 1

[node name="LineEdit" type="LineEdit" parent="WriteAmountPop/vbc/period2"]
margin_left = 106.0
margin_right = 208.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="period3" type="HBoxContainer" parent="WriteAmountPop/vbc"]
visible = false
margin_top = 45.0
margin_right = 208.0
margin_bottom = 74.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WriteAmountPop/vbc/period3"]
margin_right = 102.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Amount:"
align = 1

[node name="LineEdit" type="LineEdit" parent="WriteAmountPop/vbc/period3"]
margin_left = 106.0
margin_right = 208.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HandSettings" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.0
margin_top = -98.5
margin_right = 155.0
margin_bottom = 98.5
window_title = "Hand Settings"

[node name="vb" type="VBoxContainer" parent="HandSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="squeeze_spacing" type="HBoxContainer" parent="HandSettings/vb"]
margin_right = 294.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="sname" type="Label" parent="HandSettings/vb/squeeze_spacing"]
margin_right = 146.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Squeeze spacing"
align = 2

[node name="input" type="LineEdit" parent="HandSettings/vb/squeeze_spacing"]
margin_left = 150.0
margin_right = 294.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "0.35"
placeholder_text = "Spacing (float)"

[node name="squeeze_start" type="HBoxContainer" parent="HandSettings/vb"]
margin_top = 33.0
margin_right = 294.0
margin_bottom = 62.0
size_flags_horizontal = 3

[node name="sname" type="Label" parent="HandSettings/vb/squeeze_start"]
margin_right = 145.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Squeeze start"
align = 2

[node name="input" type="LineEdit" parent="HandSettings/vb/squeeze_start"]
margin_left = 149.0
margin_right = 294.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "10"
placeholder_text = "Cards (int)"

[node name="sort_by_second_value" type="CheckBox" parent="HandSettings/vb"]
margin_top = 66.0
margin_right = 294.0
margin_bottom = 95.0
focus_mode = 0
size_flags_horizontal = 3
pressed = true
text = "Sort by second card value (color)"
align = 1

[node name="setting3" type="HBoxContainer" parent="HandSettings/vb"]
visible = false
margin_top = 99.0
margin_right = 294.0
margin_bottom = 128.0
size_flags_horizontal = 3

[node name="sname" type="Label" parent="HandSettings/vb/setting3"]
margin_right = 145.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "setting0"
align = 2

[node name="input" type="LineEdit" parent="HandSettings/vb/setting3"]
margin_left = 149.0
margin_right = 294.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "0.9"

[connection signal="index_pressed" from="PopupMenu" to="." method="_on_PopupMenu_index_pressed"]
[connection signal="popup_hide" from="PopupMenu" to="." method="_on_PopupMenu_popup_hide"]
[connection signal="popup_hide" from="WriteAmountPop" to="." method="_on_WriteAmountPop_popup_hide"]
